objects/APTS_Cost_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Cost_Type__c</fullName>
        <label>Cost Type</label>
        <referenceTo>Apttus_Config2__CostType__c</referenceTo>
        <relationshipLabel>Cost Matrices</relationshipLabel>
        <relationshipName>Cost_Matrices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Cost Matrices</relationshipLabel>
        <relationshipName>Cost_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Cost Matrices (Dimension 2)</relationshipLabel>
        <relationshipName>Cost_Matrices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Cost Matrices (Dimension 3)</relationshipLabel>
        <relationshipName>Cost_Matrices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Cost Matrix Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Matrices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>